[project]
name = "ri-telegram-bot"
version = "0.1.0"
description = "RI Telegram Bot"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "python-telegram-bot>=20.0",
    "pymongo>=4.0",
    "certifi>=2024.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
