[project]
name = "ri-telegram-bot"
version = "0.1.0"
description = "RI Telegram Bot"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "python-telegram-bot>=20.0",
    "pymongo>=4.0",
    "certifi>=2024.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "anyio>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
